tests/golden/errors/no_main.stderr
error[name]: a program defines `main` (a library may offer `play` instead)
  --> no_main.kso:1:1
   1 | fn greet name
       ^
